# cef-test

./: .gitignore  Cargo.toml  LICENSE  README.md
cef-test-core/: Cargo.toml
cef-test-core/src/: lib.rs  util.rs
cef-test-core/src/cef/: mod.rs  web_content.rs
cef-test-core/src/harness/: adapter.rs  adaptor.rs  feedback.rs  harness.rs  headless_adapter.rs  headless_adaptor.rs  instructions.rs  mod.rs  runner.rs
cef-test-core/src/harness/json_runner/: mod.rs  runner.rs  structure.rs
examples/: click_on_friends.json
src/: cli.rs  main.rs
