[package]
name = "cef-test-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cef-test-core = { version = "0.1.0", path = "./cef-test-core" }
clap = { version = "4", features = [ "derive" ] }

# logging
log = "0.4"
simplelog = "0.12"
