[package]
name = "cef-test-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
chrono = { version = "0.4" }
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.6", features = [ "json" ] }

# adaptor
headless_chrome = { version = "1.0" }
